--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@blokay/react",
   "private": false,
-  "version": "0.1.3",
+  "version": "0.1.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "publish": "npm publish --access public"
+    "ship": "npm publish --access public"
   },
   "dependencies": {
     "chart.js": "^4.4.3",
